<resources>
    <string name="app_name">OucFreeTalk</string>
    <string name="username">请输入手机号码或学号</string>
    <string name="password">请输入密码</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="regist">新用户注册</string>
    <string name="login">登  录</string>
    <string name="register">注  册</string>
    <string name="person_edit">编辑资料</string>
    <string name="register_title">账号注册</string>
    <string name="set_username">请输入校园账号</string>
    <string name="set_password">请设置密码</string>
    <string name="set_password_again">请再次输入密码</string>
    <string name="input_code">请输入昵称</string>
    <string name="get_code">获取验证码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="information">基本资料</string>
    <string name="jwc">我的教务处</string>
    <string name="score">我的学习</string>
    <string name="power">管理员权限</string>
    <string name="stu_number">学号认证</string>
    <string name="proof">认证</string>
    <string name="input_id">请输入学工号或教工号</string>
    <string name="input_pass">请输入教务处密码</string>
    <string name="addPost">发表</string>
</resources>
